<resources>
    <string name="app_name">Spiel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_screen_title">Log in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number_opt">Phone Number (Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_conversations">Your Conversations</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message</string>
</resources>